atelier/tests/snapshots/service__launchd__com.github.gauthierdoppler.md-preview.snap
---
source: tests/service.rs
expression: plist
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
  <key>Label</key><string>com.github.gauthierdoppler.md-preview</string>
  <key>ProgramArguments</key>
  <array>
    <string>/bin/sh</string>
    <string>-c</string>
    <string>exec "$HOME/.local/bin/atelier" preview serve >>"$HOME/Library/Logs/md-preview.log" 2>&amp;1</string>
  </array>
  <key>RunAtLoad</key><true/>
  <key>KeepAlive</key><true/>
  <key>ThrottleInterval</key><integer>10</integer>
</dict>
</plist>
